src/objects/Controlled_Document__c.object
<CustomObject>
    <fields>
        <fullName>Final_Signatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field represents who the intended Final Signatory of a Controlled Document should be.</description>
        <inlineHelpText>This field represents who the intended Final Signatory of a Controlled Document should be.</inlineHelpText>
        <label>Final Signatory</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Controlled_Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Freeze_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When selected, this Controlled Document record should not be deleted from the system or archived.</inlineHelpText>
        <label>Freeze Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_25day_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full 25 days to process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_5day_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full 5day Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GSA_AR_Signature_Approval_of_the_Admin__c</fullName>
        <formula>IF( ( ISPICKVAL( GSA_Action_Required__c , &quot;Signature/Approval of the Administrator&quot;))  , 1, 0)</formula>
        <label>GSA AR=Signature/Approval of the Admin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GSA_Action_Required__c</fullName>
        <inlineHelpText>This field indicates the highest-level action required for record closure.</inlineHelpText>
        <label>GSA Action Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signature/Approval of the Administrator</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of the Deputy Administrator</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of the Chief of Staff</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of the PBS Commissioner</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of the FAS Commissioner</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of the TTS Commissioner</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of H1AA Director</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OAS</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OCFO</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OCIA</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OCIO</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OCM</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OCR</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OGC</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OGP</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OHRM</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OMA</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- OSBU</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of HSSO- TTS</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval of PTT</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R1</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R2</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R3</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R4</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R5</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R6</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R7</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R8</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R9</fullName>
                </value>
                <value>
                    <fullName>Signature/Approval RA- R10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Due_Date_Missed__c</fullName>
        <inlineHelpText>If there is a hard due date, explain what will happen if the due date is missed.</inlineHelpText>
        <label>If Due Date Missed:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incoming_Correspondence_Format__c</fullName>
        <inlineHelpText>The medium used for the incoming piece of correspondence.</inlineHelpText>
        <label>Incoming Correspondence Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incoming_Correspondence_Notes__c</fullName>
        <inlineHelpText>Origin or correspondence notes.</inlineHelpText>
        <label>Source Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incoming_Doc__c</fullName>
        <inlineHelpText>This is a link to the incoming Doc.</inlineHelpText>
        <label>Incoming Doc</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Instructions_for_Expediting__c</fullName>
        <description>This field is used to describe the reason and to detail the specific instructions associated with expediting the approval of this Controlled Document.</description>
        <inlineHelpText>This field is used to describe the reason and to detail the specific instructions associated with expediting the approval of this Controlled Document.</inlineHelpText>
        <label>Instructions for Expediting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_External__c</fullName>
        <description>This field indicates whether the file(s) being approved is a response to an outside request or is a GSA initiated document.</description>
        <inlineHelpText>External: Documents responding to request from outside GSA (e.g., congressional response). 
Internal: GSA-initiated documents to fulfill legal, regulatory, or other requirement (e.g., delegations, prospectuses, MOUs, reports).</inlineHelpText>
        <label>Internal/External</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Percent_Controls_Full_5_Days__c</fullName>
        <formula>IF(( Full_5day_Review__c = TRUE  &amp;&amp;  Total_Internal1__c = 1), 1, 0)</formula>
        <label>(Internal) Percent Controls(Full 5 Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NARA_Classification__c</fullName>
        <inlineHelpText>Used to indicate whether a Controlled Document is a permanent or temporary record.</inlineHelpText>
        <label>NARA Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Permanent Record</fullName>
                </value>
                <value>
                    <fullName>Temporary Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Num_5_days_for_A_suite_25_days_process__c</fullName>
        <formula>IF((Full_5day_Review__c = FALSE  &amp;&amp;  Full_25day_Process__c = FALSE), 1, 0)</formula>
        <label>Num&lt;5 days for A-suite(&lt;25 days process)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_5_days_for_A_suite_25days_process__c</fullName>
        <formula>IF(( Full_5day_Review__c = FALSE  &amp;&amp;  Full_25day_Process__c = TRUE), 1, 0)</formula>
        <label>Num&lt;5 days for A-suite (25days process)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberAdmin_Internal_Congressionals__c</fullName>
        <formula>IF((  GSA_AR_Signature_Approval_of_the_Admin__c =1  &amp;&amp; Total_Internal1__c = 1), 1, 0)</formula>
        <label>NumberAdmin Internal Congressionals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Administrator_Congressionals__c</fullName>
        <formula>IF((ISPICKVAL( GSA_Action_Required__c , &quot;Signature/Approval of the Administrator&quot;)), 1, 0)</formula>
        <label>Number Administrator Congressionals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Cleared_in_20_or_Fewer_Days__c</fullName>
        <formula>IF( Days_Open__c &lt; 20, 1, 0)</formula>
        <label>Number Cleared in 20  or Fewer Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Cleared_in_21_to_25_Days__c</fullName>
        <formula>IF(( Days_Open__c &gt; 20  &amp;&amp; Days_Open__c &lt; 26), 1, 0)</formula>
        <label>Number Cleared in 21 to 25 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Cleared_in_over_25_Days_Admin__c</fullName>
        <formula>IF(( Days_Open__c &gt; 25  &amp;&amp;  GSA_AR_Signature_Approval_of_the_Admin__c = 1), 1, 0)</formula>
        <label>Number Cleared in over 25 Days Admin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Cleared_in_over_25_Days__c</fullName>
        <formula>IF( Days_Open__c &gt;25, 1, 0)</formula>
        <label>Number Cleared in over 25 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_External_with_less_than_Full_5__c</fullName>
        <formula>IF(( (Full_5day_Review__c &lt;&gt; TRUE) &amp;&amp; GSA_AR_Signature_Approval_of_the_Admin__c =1 &amp;&amp;  Total_External1__c =1), 1, 0)</formula>
        <label>External w less Full 5day A-Suite review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Incoming__c</fullName>
        <formula>IF(
(
( MONTH( ExecSec_Start_Date__c )  =  MONTH( ExecSec_End_Date__c ) )
 &amp;&amp; ( YEAR( ExecSec_Start_Date__c )  =  YEAR( ExecSec_End_Date__c )) 
), 1, 0)</formula>
        <label>Number Incoming</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Internal_with_less_than_Full_5__c</fullName>
        <formula>IF(( (Full_5day_Review__c &lt;&gt; TRUE)  &amp;&amp;  GSA_AR_Signature_Approval_of_the_Admin__c =1  &amp;&amp;   Total_Internal1__c =1), 1, 0)</formula>
        <label>Internal w less Full 5day A-Suite review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_controls_5_day_Review_25_days__c</fullName>
        <formula>IF((Full_5day_Review__c = TRUE  &amp;&amp;  Full_25day_Process__c = FALSE), 1, 0)</formula>
        <label>Number controls 5 day Review (&lt; 25 days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_controls_5_day_Review_Full_25_da__c</fullName>
        <formula>IF((Full_5day_Review__c = TRUE  &amp;&amp;  Full_25day_Process__c = TRUE), 1, 0)</formula>
        <label>Num controls 5 day Review (Full 25 days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Businessline_signed_controls1__c</fullName>
        <formula>IF( 
( 
( ISPICKVAL( Originating_Office__c , &quot;Region 1&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval RA- R1&quot;))||
( ISPICKVAL( Originating_Office__c , &quot;Region 2&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval RA- R2&quot;))||
( ISPICKVAL( Originating_Office__c , &quot;Region 3&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval RA- R3&quot;))||
( ISPICKVAL( Originating_Office__c , &quot;Region 4&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval RA- R4&quot;))||
( ISPICKVAL( Originating_Office__c , &quot;Region 5&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval RA- R5&quot;))||
( ISPICKVAL( Originating_Office__c , &quot;Region 6&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval RA- R6&quot;))||
( ISPICKVAL( Originating_Office__c , &quot;Region 7&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval RA- R7&quot;))||
( ISPICKVAL( Originating_Office__c , &quot;Region 8&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval RA- R8&quot;))||
( ISPICKVAL( Originating_Office__c , &quot;Region 9&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval RA- R9&quot;))||
( ISPICKVAL( Originating_Office__c , &quot;National Capital Region&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval RA- NCR&quot;))
), 1, 0)</formula>
        <label>Number_of_Businessline_signed_controls1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Businessline_signed_controls2__c</fullName>
        <formula>IF(( Number_of_Businessline_signed_controls__c = 1  ||  Number_of_Businessline_signed_controls1__c = 1), 1, 0)</formula>
        <label>Number of Businessline signed controls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Businessline_signed_controls__c</fullName>
        <formula>IF(
(
( ISPICKVAL( Originating_Office__c , &quot;AK - Office of Civil Rights&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of HSSO- OCR&quot;)) || 
( ISPICKVAL( Originating_Office__c , &quot;A - Office of the Administrator&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of the Administrator&quot;)) ||
( ISPICKVAL( Originating_Office__c , &quot;B - Office of the Chief Financial Officer&quot;) &amp;&amp;  (ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of HSSO- OCFO&quot;) || ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of the Deputy Administrator&quot;)))  || 
( ISPICKVAL( Originating_Office__c , &quot;C - Office of Human Resource Management&quot;) &amp;&amp;  (ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of HSSO- OHRM&quot;) || ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of the Chief of Staff&quot;)))||
( ISPICKVAL( Originating_Office__c , &quot;D - Office of Mission Assurance&quot;) &amp;&amp;  (ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of HSSO- OMA&quot;) || ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of H1AA Director&quot;)))||
( ISPICKVAL( Originating_Office__c , &quot;E - Office of Small Business Utilization&quot;) &amp;&amp;  (ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of HSSO- OSBU&quot;) || ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of the TTS Commissioner&quot;)))||
( ISPICKVAL( Originating_Office__c , &quot;G - Civilian Board of Contract Appeals&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Other&quot;)) || 
( ISPICKVAL( Originating_Office__c , &quot;H - Office of Administrative Services&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of HSSO- OAS&quot;)) ||
( ISPICKVAL( Originating_Office__c , &quot;I - Office of the GSA IT&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of HSSO- OCIO&quot;)) ||
( ISPICKVAL( Originating_Office__c , &quot;J - Office of the Inspector General&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Other&quot;)) ||
( ISPICKVAL( Originating_Office__c , &quot;L - Office of the General Counsel&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of HSSO- OGC&quot;)) ||
( ISPICKVAL( Originating_Office__c , &quot;M - Office of Governmentwide Policy&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of HSSO- OGP&quot;)) ||
( ISPICKVAL( Originating_Office__c , &quot;O - Office of Customer Experience&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Other&quot;)) ||
( ISPICKVAL( Originating_Office__c , &quot;P - Public Buildings Service&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of the PBS Commissioner&quot;)) ||
( ISPICKVAL( Originating_Office__c , &quot;PTT - Presidential Transition Team&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of PTT&quot;)) ||
( ISPICKVAL( Originating_Office__c , &quot;Q - Federal Acquisition Service&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of the FAS Commissioner&quot;)) ||
( ISPICKVAL( Originating_Office__c , &quot;S - Office of Congressional and Intergovernmental Affairs&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of HSSO- OCIA&quot;))||
( ISPICKVAL( Originating_Office__c , &quot;T - Technology Transformation Service&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of HSSO- TTS&quot;))||
( ISPICKVAL( Originating_Office__c , &quot;Y - Federal Permitting Improvement Steering Council&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Other&quot;))||
( ISPICKVAL( Originating_Office__c , &quot;Z - Office of Strategic Communication&quot;) &amp;&amp;  ISPICKVAL( GSA_Action_Required__c, &quot;Signature/Approval of HSSO- OCM&quot;)) 
), 1, 0)</formula>
        <label>Number of Businessline signed controls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Congressionals_20_days__c</fullName>
        <formula>IF(( Days_Open__c &lt; 20  &amp;&amp;  Congressional__c  = TRUE), 1, 0)</formula>
        <label>Number of Congressionals &lt;20 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Congressionals__c</fullName>
        <formula>IF( Congressional__c = TRUE, 1, 0)</formula>
        <label>Number of Congressionals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_External_Incoming__c</fullName>
        <formula>IF(
(Number_Incoming__c = 1  &amp;&amp;  Total_External1__c  = 1)
, 1, 0)</formula>
        <label>Number of (External) Incoming</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_with_less_than_Full5_day_A_Suite__c</fullName>
        <formula>IF((  Full_5day_Review__c  &lt;&gt; TRUE  &amp;&amp;  GSA_AR_Signature_Approval_of_the_Admin__c =1), 1, 0)</formula>
        <label>Number with less than Full 5 day A-Suite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCIA_Signed__c</fullName>
        <formula>IF(( ISPICKVAL( GSA_Action_Required__c , &quot;Signature/Approval of HSSO- OCIA&quot;)) , 1, 0)</formula>
        <label>OCIA Signed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OMB_Flag__c</fullName>
        <description>This is a formula field to display the OMB picklist value with the highlighted color.</description>
        <formula>IMAGE( 
CASE 
(OMB__c, &quot;Pre-OMB&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;Post-OMB&quot;, &quot;/img/samples/flag_red.gif&quot;, &quot;/s.gif&quot; 
), &quot;red&quot;, 20, 20 
)</formula>
        <label>OMB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMB__c</fullName>
        <label>OMB</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-OMB</fullName>
                </value>
                <value>
                    <fullName>Post-OMB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Time1__c</fullName>
        <formula>IF(( Overdue__c = 0), 1, 0)</formula>
        <label>Cumulative On Time Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Time__c</fullName>
        <formula>IF( ExecSec_Days_Overdue__c &lt; 1, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_time_OCIA_Signed__c</fullName>
        <formula>IF(
( On_Time__c = 1  &amp;&amp;  OCIA_Signed__c = 1) 
, 1, 0)</formula>
        <label>On time (OCIA Signed)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Originating_Office__c</fullName>
        <inlineHelpText>The division originating or overseeing the Controlled Document. Once a value is selected, users from that Originating Service/Staff Office will be able to access and edit this Controlled Document unless further restrictions are implemented.</inlineHelpText>
        <label>Originating Service/Staff Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - Office of the Administrator</fullName>
                </value>
                <value>
                    <fullName>AK - Office of Civil Rights</fullName>
                </value>
                <value>
                    <fullName>B - Office of the Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>C - Office of Human Resources Management</fullName>
                </value>
                <value>
                    <fullName>D - Office of Mission Assurance</fullName>
                </value>
                <value>
                    <fullName>E - Office of Small Business Utilization</fullName>
                </value>
                <value>
                    <fullName>G - Civilian Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>H - Office of Administrative Services</fullName>
                </value>
                <value>
                    <fullName>I - Office of the GSA IT</fullName>
                </value>
                <value>
                    <fullName>J - Office of the Inspector General</fullName>
                </value>
                <value>
                    <fullName>L - Office of the General Counsel</fullName>
                </value>
                <value>
                    <fullName>M - Office of Governmentwide Policy</fullName>
                </value>
                <value>
                    <fullName>O - Office of Customer Experience</fullName>
                </value>
                <value>
                    <fullName>P - Public Buildings Service</fullName>
                </value>
                <value>
                    <fullName>Q - Federal Acquisition Service</fullName>
                </value>
                <value>
                    <fullName>S - Office of Congressional &amp; Intergovernmental Affairs</fullName>
                </value>
                <value>
                    <fullName>T - Technology Transformation Service</fullName>
                </value>
                <value>
                    <fullName>Y - Federal Permitting Improvement Steering Council</fullName>
                </value>
                <value>
                    <fullName>Z - Office of Strategic Communication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Originating_Service_Staff_Office_Abbr__c</fullName>
        <description>This field holds the abbreviation for the division originating or overseeing the Controlled Document. Example I - Office of the GSA IT is abbreviated to OCIO.</description>
        <formula>CASE(Originating_Office__c, 
&quot;A - Office of the Administrator&quot;, &quot;A&quot;,
&quot;AK - Office of Civil Rights&quot;, &quot;OCR&quot;,
&quot;B - Office of the Chief Financial Officer&quot;, &quot;OCFO&quot;,
&quot;C - Office of Human Resources Management&quot;, &quot;OHRM&quot;,
&quot;D - Office of Mission Assurance&quot;, &quot;OMA&quot;,
&quot;E - Office of Small Business Utilization&quot;, &quot;OSBU&quot;,
&quot;G - Civilian Board of Contract Appeals&quot;, &quot;CBCA&quot;,
&quot;H - Office of Administrative Services&quot;, &quot;OAS&quot;,
&quot;I - Office of the GSA IT&quot;, &quot;OCIO&quot;,
&quot;J - Office of the Inspector General&quot;, &quot;OIG&quot;,
&quot;L - Office of the General Counsel&quot;, &quot;OGC&quot;,
&quot;M - Office of Governmentwide Policy&quot;, &quot;OGP&quot;,
&quot;O - Office of Customer Experience&quot;, &quot;OCE&quot;,
&quot;P - Public Buildings Service&quot;, &quot;PBS&quot;,
&quot;Q - Federal Acquisition Service&quot;, &quot;FAS&quot;,
&quot;S - Office of Congressional &amp; Intergovernmental Affairs&quot;, &quot;OCIA&quot;,
&quot;T - Technology Transformation Service&quot;, &quot;TTS&quot;,
&quot;Y - Federal Permitting Improvement Steering Council&quot;, &quot;FPISC&quot;,
&quot;Z - Office of Strategic Communication&quot;, &quot;OSC&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Originating Service/Staff Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue_OCIA_Signed__c</fullName>
        <formula>IF(( Overdue__c = 1  &amp;&amp;  OCIA_Signed__c = 1), 1, 0)</formula>
        <label>Overdue (OCIA Signed)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <formula>IF( ExecSec_Days_Overdue__c &gt; 0, 1, 0)</formula>
        <label>Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_21_days__c</fullName>
        <description>Percent &lt;21 days - White House Letters</description>
        <formula>IF( Days_Open__c &lt; 22, &apos;Percent &lt;21 days&apos;, &apos;0&apos;)</formula>
        <label>Percent &lt;21 days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Cleared_in_20_or_Fewer_Days__c</fullName>
        <formula>IF( (Days_Open__c &lt; 21  &amp;&amp;  OCIA_Signed__c =1) , 1, 0)</formula>
        <label>Number Cleared in 20 or Fewer Days OCIA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Full_5_day_A_Suite_Review__c</fullName>
        <formula>IF(( Full_5day_Review__c = TRUE  &amp;&amp;  GSA_AR_Signature_Approval_of_the_Admin__c =1), 1, 0)</formula>
        <label>Percent Full 5 day A-Suite Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_grt21_days__c</fullName>
        <description>Percent &gt;21 days</description>
        <formula>IF( Days_Open__c &gt; 21, &apos;Percent &gt;21 days&apos;, &apos;0&apos;)</formula>
        <label>Percent &gt;21 days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_grt21days__c</fullName>
        <formula>IF( Days_Open__c &gt; 21, 1, 0)</formula>
        <label>Percent &gt;21 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_less21days__c</fullName>
        <formula>IF( Days_Open__c &lt; 22, 1, 0)</formula>
        <label>Percent &lt;21 days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_File_Deletion__c</fullName>
        <description>Reason to be Entered for the file deletion. This reason will be logged in the CDTDeletionLog Object</description>
        <label>Reason For File Deletion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Counter__c</fullName>
        <formula>1</formula>
        <label>Record Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>The region (or Central Office) involved in originating or overseeing this Controlled Document record.</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central Office</fullName>
                </value>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>National Capital Region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Due_Date_External_Delivery_1__c</fullName>
        <description>The date due to external office.</description>
        <inlineHelpText>The date due to external office.</inlineHelpText>
        <label>Requested Due Date - External Delivery 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Due_Date_External_Delivery_2__c</fullName>
        <description>The date due to other external office (if needed).</description>
        <inlineHelpText>The date due to other external office (if needed).</inlineHelpText>
        <label>Requested Due Date - External Delivery 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Draft__c</fullName>
        <inlineHelpText>This is the response draft.</inlineHelpText>
        <label>Response Draft</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Restrict_Record_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field restricts access to the record to only those users who are collaborators, owners, or approvers on a record. It also includes ExecSec users if the record has been exposed to ExecSec.</description>
        <inlineHelpText>When selected, this field restricts access to the Controlled Document record to only those users who are Collaborators, Approvers, or the Owner of the record. It also includes ExecSec users if the record has been exposed to ExecSec.</inlineHelpText>
        <label>Restrict Record Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_Date__c</fullName>
        <inlineHelpText>The date a final signature was obtained on the record.</inlineHelpText>
        <label>Signature Date</label>
        <type>Date</type>
    </fields>
</CustomObject>